--- a/src/pages/Housing/housing.module.scss
+++ b/src/pages/Housing/housing.module.scss
@@ -1,3 +1,9 @@
+.container {
+  padding: 20px;
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -84,5 +90,9 @@
 .expandable-section ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
+}
+
+.expandable-section p {
   margin: 0;
 }
