--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,20 +1,33 @@
 .headerLogo {
   height: auto;
+
+  @media (max-width: 768px) {
+    width: 145px; 
+  }
 }
 
 .navContainer {
   width: 100%;
   max-width: 1240px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 45px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
+
+  @media (max-width: 768px) {
+    padding: 0 20px;
+  }
 }
 
 .navLinksContainer {
   display: flex;
   gap: 57px;
+
+  @media (max-width: 768px) {
+    gap: 26px;
+  }
 }
 
 .styledLinkNav {
@@ -29,5 +42,10 @@
   &.active {
     text-decoration: underline;
     text-decoration-skip-ink: none;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 12px;
+    text-transform: uppercase;
   }
 }
