--- a/src/components/Error/error.module.scss
+++ b/src/components/Error/error.module.scss
@@ -29,3 +29,18 @@
   color: black;
   border-radius: 5px;
 }
+
+
+@media (max-width: 768px) {
+  .errorTitle {
+    font-size: 96px;
+  }
+
+  .errorSubtitle {
+    font-size: 18px;
+  }
+
+  .homeLink {
+    font-size: 14px;
+  }
+}
