--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -64,6 +64,8 @@
   }
 
   @media (max-width: 1024px) {
+    padding: 0 25px;
+
     & > * {
       flex: 1 1 calc(50% - 60px);
       max-width: calc(50% - 60px);
