--- a/src/utils/style/_variables.scss
+++ b/src/utils/style/_variables.scss
@@ -1,5 +1,4 @@
-$primary-color: #FF6060;
+$primary-color: #ff6060;
 $secondary-color: #2ecc71;
-$color-black: #000000;
-$gallery-bg-color: #F6F6F6;
+$gallery-bg-color: #f6f6f6;
 $font-stack: 'Montserrat', sans-serif;
