--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -12,10 +12,22 @@
   background-color: black;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: 668px) {
+    gap: 10px;
+  }
 }
 
 .rights {
   display: flex;
   justify-content: center;
   color: white;
+  font-size: 24px;
+
+  @media (max-width: 668px) {
+    font-size: 12px;
+    flex-wrap: wrap;
+    text-align: center;
+    max-width: 130px;
+  }
 }
