--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -25,6 +25,7 @@
 .navLinksContainer {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .styledLinkNav {
@@ -39,7 +40,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 668px) {
   .styledLinkNav {
     font-size: 12px;
     text-transform: uppercase;
@@ -53,5 +54,4 @@
     width: 145px;
     height: auto;
   }
-  
 }
