--- a/src/pages/About/about.module.scss
+++ b/src/pages/About/about.module.scss
@@ -1,6 +1,7 @@
 .aboutWrapper {
     display: flex;
     justify-content: center;
+    min-height: 90vh;
   }
   
   .aboutContainer {
@@ -9,6 +10,10 @@
     margin: 45px;
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 668px) {
+      margin: 20px;
+  }
   }
   
   .titleWrapper {
@@ -25,7 +30,7 @@
     border-radius: 25px;
     box-shadow: 0px 4px 4px 0px #00000040;
 
-    @media (max-width: 768px) {
+    @media (max-width: 668px) {
         height: 111px;
     }
   }
@@ -40,5 +45,9 @@
     padding: 0;
     border-radius: 5px;
     position: relative;
+
+    @media (max-width: 668px) {
+      gap: 20px;
+  }
   }
   
