--- a/src/pages/Housing/housing.module.scss
+++ b/src/pages/Housing/housing.module.scss
@@ -4,20 +4,25 @@
   padding: 20px;
   max-width: 1240px;
   margin: 0 auto;
+  min-height: 90vh;
 }
 
-.header {
+.headerContainer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 10px;
+}
+
+.headerLeft {
+  flex: 1;
 }
 
 .title-location h1 {
   color: vars.$primary-color;
   font-weight: 500;
   font-size: 36px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .title-location p {
@@ -25,26 +30,7 @@
   font-size: 18px;
   font-weight: 500;
   margin-top: 0;
-  margin-bottom: 5px;
-}
-
-.host-info {
-  display: flex;
-  align-items: center;
-  color: vars.$primary-color;
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.host-name {
-  max-width: 100px;
-  margin-right: 10px;
-  text-align: end;
-}
-
-.host-picture {
-  width: 64px;
-  border-radius: 50%;
+  margin-bottom: 20px;
 }
 
 .tags-rating {
@@ -80,6 +66,35 @@
   margin-left: auto;
 }
 
+.headerRight {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  color: vars.$primary-color;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.host-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.host-name {
+  flex-wrap: wrap;
+  max-width: 100px;
+  margin-right: 10px;
+  text-align: end;
+}
+
+.host-picture {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
 .section-container {
   display: flex;
   justify-content: space-between;
@@ -99,4 +114,57 @@
 
 .expandable-section p {
   margin: 0;
+}
+
+@media (max-width: 668px) {
+  .headerContainer {
+    flex-direction: column;
+  }
+
+  .title-location h1 {
+    font-size: 18px;
+  }
+
+  .title-location p {
+    font-size: 14px;
+  }
+
+  .headerRight {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .host-info {
+    margin-left: auto;
+  }
+
+  .host-name {
+    font-size: 12px;
+  }
+
+  .host-picture {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+  }
+
+  .horizontal-list li {
+    min-width: 84px;
+    min-height: 18px;
+    font-size: 10px;
+  }
+
+  .rating {
+    margin-left: 0;
+  }
+
+  .section-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .expandable-section {
+    max-width: 100%;
+  }
 }
