--- a/src/pages/Housing/housing.module.scss
+++ b/src/pages/Housing/housing.module.scss
@@ -110,11 +110,11 @@
 .expandable-section ul {
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 20px 5px;
 }
 
 .expandable-section p {
-  margin: 0;
+  margin: 20px 5px;
 }
 
 @media (max-width: 668px) {
