--- a/src/components/ExpandableSection/expandable_section.module.scss
+++ b/src/components/ExpandableSection/expandable_section.module.scss
@@ -35,19 +35,24 @@
 }
 
 .sectionContent {
-  display: none;
+  overflow: hidden;
+  height: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  transition: height 0.3s ease, padding 0s ease 0.3s;
   font-size: 20px;
   line-height: 1.3;
   color: black;
   background-color: vars.$gallery-bg-color;
   border-radius: 0 0 5px 5px;
-  padding: 5px 20px;
+  padding: 0px 20px;
   box-sizing: border-box;
   text-align: left;
 }
 
 .sectionContentOpen {
-  display: block;
+  height: auto;
+  transition: height 0.3s ease, padding 0.3s ease;
 }
 
 @media (max-width: 668px) {
